fixed tags margin on mobile

--- a/css/less/page/portfolio.less
+++ b/css/less/page/portfolio.less
@@ -54,5 +54,6 @@
 		}
 		.port-title,
 		.port-description{ margin-right: 0; width: auto;}
+		.port-tag{ margin: 0 @margin/4;}
  	}
 }
